// Centralized version management for all modules
plugins {
    id 'org.openrewrite.rewrite' version '6.26.0' apply false
}

ext {
    // Project version
    projectVersion = '2.3.0'

    // Core dependency versions
    springBootVersion = '4.0.1'
    springDependencyManagementVersion = '1.1.8'

    // Library versions
    bcryptVersion = '0.4'
    caffeineVersion = '3.2.3'
    gsonVersion = '2.13.2'
    guavaVersion = '33.5.0-jre'
    h2Version = 'managed'
    jjwtVersion = '0.13.0'
    jsoupVersion = '1.21.2'
    lombokVersion = '1.18.42'
    seleniumVersion = '4.39.0'
    springdocVersion = '2.8.13'
    twelvemonkeysVersion = '3.13.0'
    webdrivermanagerVersion = '6.3.3'

    // Test dependency versions
    jacocoVersion = '0.8.11'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'jacoco'
    apply plugin: 'org.openrewrite.rewrite'

    // Set version from central definition
    version = rootProject.ext.projectVersion
    group = 'kkdad'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    // Default JaCoCo configuration for all subprojects
    jacoco {
        toolVersion = rootProject.ext.jacocoVersion
    }



    // Add JUnit Platform Launcher for all subprojects (required by Gradle 8.5+)
    dependencies {
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:2.0.6")
    }

    rewrite {
        activeRecipe("org.openrewrite.java.testing.assertj.JUnitToAssertj")
    }
}

// Add testAll task to run all tests in all subprojects
task testAll {
    // TEMPORARY: Only run unit tests until integration tests are fixed with facade pattern
    dependsOn subprojects.collect { it.path + ':test' }
    description = 'Runs all tests in all subprojects (currently only unit tests)'
    group = 'verification'
}



